[tool.poetry]
name = "rtx"
version = "0.1.0"
description = ""
authors = ["Thomas Steinert <hello@chroni.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
ansible = "^8"
ansible-core = "^2"
docker = "^6"
python = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
